--- a/crud_medical/views/medical.ejs
+++ b/crud_medical/views/medical.ejs
@@ -38,9 +38,9 @@
     <center>
     <h4>Add New</h4>
     <form class ="" action= "/medicals/add" method = "post">
-        <input type = "text" placeholder="cholesterol" name = "cholesterol">
-        <input type = "text" placeholder="blood_sugar" name = "blood_sugar">
-        <input type = "text" placeholder="blood_pressure" name = "blood_pressure">
+        <input type = "text" placeholder="cholesterol" name = "cholesterol" required>
+        <input type = "text" placeholder="blood_sugar" name = "blood_sugar" required>
+        <input type = "text" placeholder="blood_pressure" name = "blood_pressure" required>
         <button>ADD</button>
     </form>
     </center>
