edit menu routes

--- a/views/editmenu.ejs
+++ b/views/editmenu.ejs
@@ -9,11 +9,9 @@
         <h1>Edit Food Menu </h1>
             <form class= '' action='/listmenu/edit/<%=menu.id%>' method = 'post'>
                 <input type ='text' placeholder='name' name='name' value = <%=menu.name%>>
-                <input type ='text' placeholder='fat' name='fat' value =<%=menu.fat%>> 
-                <input type ='text' placeholder='protein' name='protein' value = <%=menu.protein%>> 
-                <input type ='text' placeholder='carbohidrate' name='carbohidrate'  value =<%=menu.carbohidrate%>>
-                <input type ='text' placeholder='calories' name ='calories' value=<%=menu.calories%>> 
-                <input type ='text' placeholder='amount per' name ='fiber' value=<%=menu.fiber%>>      
+                <input type ='text' placeholder='cholesterol' name='cholesterol' value =<%=menu.cholesterol%>> 
+                <input type ='text' placeholder='blood_sugar' name='blood_sugar' value = <%=menu.blood_sugar%>> 
+                <input type ='text' placeholder='blood_pressure' name='blood_pressure'  value =<%=menu.blood_pressure%>>    
                 </br> 
                 </br>             
                 <button> Submit Edit Menu </button>      
