--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <h1>Order NOW!!! 50% OFF</h1>
     <h2>
         <a href = '/order'>Order Now</a>
+        <a href = '/medicals'>medical</a>
     </h2>
     </center>
     
