--- a/views/listmenu.ejs
+++ b/views/listmenu.ejs
@@ -11,39 +11,32 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>Fat</th>
-                <th>Protein</th>
-                <th>Carbohidrate</th>
-                <th>Calories</th>
-                <th>Amount per</th>
+                <th>Cholesterol</th>
+                <th>Blood Sugar</th>
+                <th>Blood Pressure</th>
                 <th>Edit Menu</th>
             </tr>
             </thead>
             <tbody>
-                <%menu.forEach(data =>{
-                {%>
+                <%menu.forEach(data =>{%>
                 <tr>
                     <td> <%=data.id%> </td>
                     <td> <%=data.name%> </td>
-                    <td> <%=data.fat%> </td>
-                    <td> <%=data.protein%> </td>
-                    <td> <%=data.carbohidrate%> </td>
-                    <td> <%=data.calories%> </td>
-                    <td> <%=data.fiber%> </td>
-                    <td><a href = '/listmenu/edit/<%=data.id%>'> Edit </a> || <a href = '/menu/delete/<%=data.id%>'>Delete </a> <td>
+                    <td> <%=data.cholesterol%> </td>
+                    <td> <%=data.blood_sugar%> </td>
+                    <td> <%=data.blood_pressure%> </td>
+                    <td><a href = '/listmenu/edit/<%=data.id%>'> Edit </a> || <a href = '/listmenu/delete/<%=data.id%>'>Delete </a> <td>
                 </tr>
-                <%}})%>
+                <%})%>
             </tbody>
         </table>
         </br>
         <h1>Add Menu </h1>
         <form class= '' action='/listmenu' method = 'post'>
             <input type ='text' placeholder='name' name='name'>
-            <input type ='text' placeholder='fat' name='fat'> 
-            <input type ='text' placeholder='protein' name='protein'> 
-            <input type ='text' placeholder='carbohidrate' name='carbohidrate'>
-            <input type ='text' placeholder='calories' name='calories'>
-            <input type ='text' placeholder='amount per' name='fiber'>
+            <input type ='text' placeholder='cholesterol' name='cholesterol'> 
+            <input type ='text' placeholder='blood_sugar' name='blood_sugar'> 
+            <input type ='text' placeholder='blood_pressure' name='blood_pressure'>
             <button> Submit Menu </button>      
         </form>
 </body>
