filter menu list berdasarkan idmedical

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <h2>
         <a href = '/order'>Order Now</a>
         <a href = '/medicals'>medical</a>
+        <a href = '/listmenu'>database menu</a>
     </h2>
     </center>
     
