--- a/views/medical.ejs
+++ b/views/medical.ejs
@@ -29,7 +29,7 @@
                 <td><%=datamed.orderId%></td>
                 <td><a href ="/medicals/edit/<%=datamed.id%>">Edit</a></td>
                 <td><a href ="/medicals/delete/<%=datamed.id%>">Delete</a></td>
-                <td><a href ="/listmenu">Menu</a></td>
+                <td><a href ="/medicals/<%=datamed.id%>/menuUser">Menu</a></td>
             </tr>
             <%})%>
         </tbody>
