update connect link

--- a/views/medical.ejs
+++ b/views/medical.ejs
@@ -19,6 +19,7 @@
             </tr>
         </thead>
         <tbody>
+            <%datamed.forEach(datamed=>{ %>
             <tr>
                 <td><%=datamed.id%></td>
                 <td><%=datamed.cholesterol%></td>
@@ -28,7 +29,7 @@
                 <td><a href ="/medicals/edit/<%=datamed.id%>">Edit</a></td>
                 <td><a href ="/medicals/delete/<%=datamed.id%>">Delete</a></td>
                 <td><a href ="/medicals/<%=datamed.id%>/menuUser">Menu</a></td>
-
+            <%})%>
             </tr>
         </tbody>
     </table>
