--- a/views/editorder.ejs
+++ b/views/editorder.ejs
@@ -11,7 +11,7 @@
                 <input type ='text' placeholder='name' name='name' value = <%=order.name%>>
                 <input type ='text' placeholder='age' name='age' value =<%=order.age%>> 
                 <input type ='text' placeholder='gender' name='gender' value = <%=order.gender%>> 
-                <input type ='text' placeholder='phone' name='phonoe'  value =<%=order.phonoe%>>
+                <input type ='text' placeholder='phone' name='phone'  value =<%=order.phone%>>
                 <input type ='text' placeholder='email' name ='email' value=<%=order.email%>> 
                 <input type ='text' placeholder='addres' name ='addres' value=<%=order.addres%>>      
                 </br> 
