--- a/views/menuUser.ejs
+++ b/views/menuUser.ejs
@@ -25,7 +25,7 @@
                         <td> <%=dataMenu.cholesterol%> </td>
                         <td> <%=dataMenu.blood_sugar%> </td>
                         <td> <%=dataMenu.blood_pressure%> </td>
-                        <td><a href="/medicals/<%= idMedical %>/menuUser/<%= dataMenu.id %>/checkout">Pick</a> </td>
+                        <td><a href="/medicals/<%= idMedical %>/menuUser/<%= dataMenu.id %>/checkout"></a> </td>
                         
                     </tr>
                 <%})%>
