--- a/views/order.ejs
+++ b/views/order.ejs
@@ -30,7 +30,7 @@
                     <td> <%=data.phone%> </td>
                     <td> <%=data.email%> </td>
                     <td> <%=data.addres%> </td>
-                    <td ><a href ='/medicals'>Medical Data </a> </td>
+                    <td ><a href ='/medicals/<%=data.id%>'>Medical Data </a> </td>
                     <td><a href = '/order/edit/<%=data.id%>'> Edit </a> || <a href = '/order/delete/<%=data.id%>'>Delete </a> <td>
                 </tr>
                 <%})%>
