--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>login</title>
 </head>
 <body>
-    <h1><center>Sign Up Now for 50%Off!!!</center></h1>
+    <h1><center>Welcome!!!</center></h1>
     </br>   
     <center>
-    <form class ="" action="/signup" method= "post">
-        <p>Please fill in this form to create an account.</p></br>
+    <form class ="" action="/" method= "post">
+        <p>Please fill in this form to login.</p></br>
         Email:  <input type="text" placeholder="Enter Email" name="email" required></br>
         Password: <input type="text" placeholder="Enter Password" name="password" required></br>
-    
-        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-        <button type="submit"><a href="/">Sign Up</a></button>
+        <button type="submit"><a href="/">Login</a></button></br>
+        </br>
+        <a href ="/signup">Sign Up</a>
     </form>
     </center>
     
