--- a/views/order.ejs
+++ b/views/order.ejs
@@ -39,12 +39,12 @@
         </br>
         <h1>Add New Order Here</h1>
         <form class= '' action='/order' method = 'post'>
-            <input type ='text' placeholder='name' name='name'>
-            <input type ='text' placeholder='age' name='age'> 
-            <input type ='text' placeholder='gender' name='gender'> 
-            <input type ='text' placeholder='phone' name='phone'>
-            <input type ='text' placeholder='email' name='email'>
-            <input type ='text' placeholder='addres' name='addres'>
+            Name: <input type ='text' placeholder='name' name='name' required></br>
+            Age: <input type ='text' placeholder='age' name='age' required> </br>
+            Gender: <input type ='text' placeholder='gender' name='gender' required> </br>
+            Phone: <input type ='text' placeholder='phone' name='phone' required></br>
+            Email: <input type ='text' placeholder='email' name='email' required></br>
+            Address: <input type ='text' placeholder='addres' name='addres' required></br>
             <button> Submit Order </button>      
         </form>
     </center>
