--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center>
-    <h1>Order NOW!!! 50% OFF</h1>
+    <h1>Order NOW!!!</h1>
     <h2>
         <a href = '/order'>Order Now</a>
         <a href = '/listmenu'>database menu</a>
