--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,10 +13,9 @@
     <form class ="" action="/" method= "post">
         <p>Please fill in this form to login.</p></br>
         Email:  <input type="text" placeholder="Enter Email" name="email" required></br>
-        Password: <input type="text" placeholder="Enter Password" name="password" required></br>
+        Password: <input type="password" placeholder="Enter Password" name="password" required></br>
         <button type="submit"><a href="/">Login</a></button></br>
-        </br>
-        <a href ="/signup">Sign Up</a>
+        <h5>Don't have account yet?</h5><a href ="/signup">Sign Up</a>
     </form>
     </center>
     
