--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><center>Sign Up Now for 50%Off!!!</center></h1>
+    <h1><center>Sign Up Now!!</center></h1>
     </br>   
     <center>
     <form class ="" action="/signup" method= "post">
         <p>Please fill in this form to create an account.</p></br>
         Email:  <input type="text" placeholder="Enter Email" name="email" required></br>
-        Password: <input type="text" placeholder="Enter Password" name="password" required></br>
-    
-        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+        Password: <input type="password" placeholder="Enter Password" name="password" required></br>
+    </br>
+        
         <button type="submit"><a href="/">Sign Up</a></button>
     </form>
     </center>
